Rearranged the porject files

--- a/DeepLearningClassifier.ipynb
+++ b/DeepLearningClassifier.ipynb
@@ -17,23 +17,13 @@
     "from torch.utils.data.dataset import Dataset\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "# We'll be using Pytorch's text library called torchtext! \n",
     "from torchtext.datasets import AG_NEWS\n",
     "from torchtext.data.utils import get_tokenizer\n",
     "from torchtext.vocab import build_vocab_from_iterator\n",
     "from torchtext.vocab import Vocab\n",
     "from torchtext.utils import download_from_url, extract_archive\n",
-    "from tqdm.notebook import trange, tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 287,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "from tqdm.notebook import trange, tqdm\n",
+    "\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
     "from string import punctuation\n",
@@ -41,19 +31,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.metrics import classification_report\n",
-    "import matplotlib.pyplot as plt\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 288,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import classification_report"
    ]
   },
   {
@@ -62,127 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "\n",
-    "# Load dataset\n",
-    "df = pd.read_csv('/Applications/Mix N Max/Vedant/SEM-1/Machine Learning Tools and algorithm/CSE584Midterm/dataset.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 290,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>But it happened every day.</td>\n",
-       "      <td>gpt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>The canines would have fitted better in the wa...</td>\n",
-       "      <td>gpt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Right now, at least, we're trying to fix a lot...</td>\n",
-       "      <td>gpt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>She wished she could simply use it to do her job.</td>\n",
-       "      <td>gpt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>But she insisted that Patrick go, and she told...</td>\n",
-       "      <td>gpt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12939</th>\n",
-       "      <td>He never imagined he'd find himself with a new...</td>\n",
-       "      <td>llama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12940</th>\n",
-       "      <td>\"It's never good to give them a reason to come...</td>\n",
-       "      <td>llama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12941</th>\n",
-       "      <td>I will start writing consistently again! Out o...</td>\n",
-       "      <td>llama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12942</th>\n",
-       "      <td>They decided to find a new place to live, but ...</td>\n",
-       "      <td>llama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12943</th>\n",
-       "      <td>Now that she needed to open the letter, she ha...</td>\n",
-       "      <td>llama</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>12944 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                       x      y\n",
-       "0                             But it happened every day.    gpt\n",
-       "1      The canines would have fitted better in the wa...    gpt\n",
-       "2      Right now, at least, we're trying to fix a lot...    gpt\n",
-       "3      She wished she could simply use it to do her job.    gpt\n",
-       "4      But she insisted that Patrick go, and she told...    gpt\n",
-       "...                                                  ...    ...\n",
-       "12939  He never imagined he'd find himself with a new...  llama\n",
-       "12940  \"It's never good to give them a reason to come...  llama\n",
-       "12941  I will start writing consistently again! Out o...  llama\n",
-       "12942  They decided to find a new place to live, but ...  llama\n",
-       "12943  Now that she needed to open the letter, she ha...  llama\n",
-       "\n",
-       "[12944 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 290,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
+    "df = pd.read_csv('dataset.csv')"
    ]
   },
   {
@@ -193,123 +53,6 @@
    "source": [
     "le = LabelEncoder()\n",
     "df['y']=le.fit_transform(df['y'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 292,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>But it happened every day.</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>The canines would have fitted better in the wa...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Right now, at least, we're trying to fix a lot...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>She wished she could simply use it to do her job.</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>But she insisted that Patrick go, and she told...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12939</th>\n",
-       "      <td>He never imagined he'd find himself with a new...</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12940</th>\n",
-       "      <td>\"It's never good to give them a reason to come...</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12941</th>\n",
-       "      <td>I will start writing consistently again! Out o...</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12942</th>\n",
-       "      <td>They decided to find a new place to live, but ...</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12943</th>\n",
-       "      <td>Now that she needed to open the letter, she ha...</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>12944 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                       x  y\n",
-       "0                             But it happened every day.  1\n",
-       "1      The canines would have fitted better in the wa...  1\n",
-       "2      Right now, at least, we're trying to fix a lot...  1\n",
-       "3      She wished she could simply use it to do her job.  1\n",
-       "4      But she insisted that Patrick go, and she told...  1\n",
-       "...                                                  ... ..\n",
-       "12939  He never imagined he'd find himself with a new...  2\n",
-       "12940  \"It's never good to give them a reason to come...  2\n",
-       "12941  I will start writing consistently again! Out o...  2\n",
-       "12942  They decided to find a new place to live, but ...  2\n",
-       "12943  Now that she needed to open the letter, she ha...  2\n",
-       "\n",
-       "[12944 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 292,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
    ]
   },
   {
@@ -427,30 +170,16 @@
    ],
    "source": [
     "\n",
-    "# Initialize tokenizer, lemmatizer, and stopwords\n",
     "tokenizer = get_tokenizer('basic_english')\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "stop_words = set(stopwords.words('english'))\n",
     "\n",
     "def preprocess_text(text):\n",
-    "    # Tokenize text\n",
     "    tokens = word_tokenize(text)\n",
-    "    # Remove punctuation and stop words, and apply lemmatization\n",
     "    tokens = [lemmatizer.lemmatize(token.lower()) for token in tokens if token.isalpha() and token not in stop_words]\n",
     "    return tokens[::-1]\n",
     "\n",
-    "# Apply preprocessing to the dataset\n",
-    "df['x'] = df['x'].apply(preprocess_text)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df.to_csv(\"cleandata.csv\")"
+    "df['x'] = df['x'].apply(preprocess_text)"
    ]
   },
   {
@@ -463,7 +192,6 @@
     "    for text in data_iter:\n",
     "        yield text\n",
     "\n",
-    "# Build vocabulary from processed text\n",
     "vocab = build_vocab_from_iterator(yield_tokens(df['x']), specials=[\"<unk>\"])\n",
     "vocab.set_default_index(vocab[\"<unk>\"])"
    ]
@@ -489,7 +217,6 @@
    "source": [
     "def encode_text(text):\n",
     "    return [vocab[token] for token in text]\n",
-    "\n",
     "df['x'] = df['x'].apply(encode_text)\n",
     "print(df['x'].head())"
    ]
@@ -523,7 +250,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Split the data into training and testing sets\n",
-    "train_data, test_data = train_test_split(df, test_size=0.2, random_state=42)"
+    "train_data, test_data = train_test_split(df, test_size=0.3, random_state=42)"
    ]
   },
   {
