--- a/HyperParameterTestClassifier.ipynb
+++ b/HyperParameterTestClassifier.ipynb
@@ -161,7 +161,7 @@
     "        [float(i > 0) for i in seq] for seq in encodings['input_ids']\n",
     "    ]\n",
     "\n",
-    "train_masks = create_attention_masksmasks(train_encodings)\n",
+    "train_masks = create_attention_masks(train_encodings)\n",
     "val_masks = create_attention_masks(val_encodings)\n"
    ]
   },
